--- a/mod1/T1_5-5_mailto.html
+++ b/mod1/T1_5-5_mailto.html
@@ -4,7 +4,7 @@
 <body>
   <h3>Generar correo</h3>
 
-  <a href="mailto:jesus@dit.upm.es?subject=Cita&body=Quedamos">
+  <a href="mailto:desarrollo@agilapps.co?subject=Cita&body=Quedamos">
   	Haga clic aquí
   </a>
 </body>
